fixing breakpoints and layout issues

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,6 +10,7 @@ body {
 /* Layout Elements */
 .wrapper {
   @include outer-container;
+  padding: 0 1rem;
 }
 
 .header {
