--- a/scss/base/_grid-settings.scss
+++ b/scss/base/_grid-settings.scss
@@ -14,3 +14,5 @@ $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
 
 $mobile: new-breakpoint(max-width 500px);
+$phablet: new-breakpoint(max-width 700px);
+$tablet: new-breakpoint(max-width 900px);
