--- a/scss/signup.scss
+++ b/scss/signup.scss
@@ -13,7 +13,7 @@
 .chooser {
   @include span-columns(4);
 
-  @include media($mobile) {
+  @include media($phablet) {
     @include span-columns(12);
   }
 
@@ -27,8 +27,9 @@
   @include span-columns(2);
   text-transform: uppercase;
 
-  @include media($mobile) {
+  @include media($phablet) {
     @include span-columns(12);
+    margin-bottom: $base-spacing;
   }
 
   p {
@@ -46,12 +47,15 @@
 .email-signup {
   @include span-columns(6);
 
-  @include media($mobile) {
+  @include media($phablet) {
     @include span-columns(12);
   }
 
   p {
     text-transform: uppercase;
+
+    @include media($phablet);
+      text-align: center;
   }
 
   button, .button {
