--- a/scss/welcome.scss
+++ b/scss/welcome.scss
@@ -19,7 +19,7 @@
 }
 
 .features {
-  @include outer-container;
+  @include span-columns(12);
   background-color: white;
   padding: $base-spacing;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20);
@@ -31,15 +31,15 @@
   border-radius: 3px 3px 0 0;
 
   .key-features {
-    @include span-columns(12);
 
     .feature {
       @include span-columns(4);
       text-align: center;
       opacity: 0;
 
-      @include media($mobile) {
+      @include media($phablet) {
         @include span-columns(12);
+        margin-bottom: $base-spacing;
       }
     }
   }
@@ -84,6 +84,11 @@
     background-color: white;
     border: 1px solid $purple;
     border-radius: 3px;
+
+    @include media($phablet) {
+      @include span-columns(12);
+      margin-bottom: $base-spacing;
+    }
   }
 
   .right {
@@ -91,6 +96,11 @@
 
     h3 {
       margin: 0 0 10px 0;
+    }
+
+    @include media($phablet) {
+      @include span-columns(12);
+      margin-bottom: $base-spacing;
     }
   }
 }
@@ -102,8 +112,9 @@
 .pricing-plan {
   @include span-columns(4);
 
-  @include media($mobile) {
+  @include media($phablet) {
     @include span-columns(12);
+    margin-bottom: $base-spacing;
   }
 
   border: 1px solid $purple;
